--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
@@ -389,10 +389,12 @@
                             </div>
                         </div>
                         <div class="ln_solid"></div>
-                        <div class="form-group row">
+
+
+                        <div class="form-group row" style="@(Model.id_linea == 14 || Model.id_linea == 15  ? "display:none":string.Empty)">
                             <span style="color:black"><b>PUNTA Y COLAS</b></span>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row" style="@(Model.id_linea == 14 || Model.id_linea == 15  ? "display:none":string.Empty)">
 
                             @Html.LabelFor(model => model.produccion_datos_entrada.peso_despunte_kgs, new { @class = "control-label col-md-1" })
                             <div class="col-md-3">
@@ -412,7 +414,9 @@
                                 <input type="text" id="porcentaje_punta_cola" class="form-control col-md-12" value="" readonly>
                             </div>
                         </div>
-                        <div class="ln_solid"></div>
+                        <div class="ln_solid" style="@(Model.id_linea == 14 || Model.id_linea == 15  ? "display:none":string.Empty)"></div>
+
+
                         <div class="form-group row">
                             <span style="color:black"><b>PIEZAS DE AJUSTE</b></span>
                         </div>
