--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/DetailsCentroHT.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/DetailsCentroHT.cshtml
@@ -7,7 +7,7 @@
     Portal_2_0.Models.budget_rel_fy_centro rel_presente = (Portal_2_0.Models.budget_rel_fy_centro)ViewBag.rel_presente;
     Portal_2_0.Models.budget_rel_fy_centro rel_proximo = (Portal_2_0.Models.budget_rel_fy_centro)ViewBag.rel_proximo;
 
-    ViewBag.Title = "FC FY " + rel_presente.budget_anio_fiscal.descripcion;
+    ViewBag.Title = "Detalles FY " + rel_presente.budget_anio_fiscal.descripcion;
     ViewBag.PrimerNivel = "plantilla_budget";
     ViewBag.SegundoNivel = "centros";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
@@ -28,21 +28,22 @@
         responsables = responsables.Substring(0, 90) + "...";
     }
 
+    //obtiene el valor de si es proximo o no 
+    bool esProximo = (bool)ViewBag.proximo;
+
     //determina si los meses son actual o no
-    bool isActualOctubre = rel_presente.budget_anio_fiscal.isActual(10) == "ACT";
-    bool isActualNoviembre = rel_presente.budget_anio_fiscal.isActual(11) == "ACT";
-    bool isActualDiciembre = rel_presente.budget_anio_fiscal.isActual(12) == "ACT";
-    bool isActualEnero = rel_presente.budget_anio_fiscal.isActual(1) == "ACT";
-    bool isActualFebrero = rel_presente.budget_anio_fiscal.isActual(2) == "ACT";
-    bool isActualMarzo = rel_presente.budget_anio_fiscal.isActual(3) == "ACT";
-    bool isActualAbril = rel_presente.budget_anio_fiscal.isActual(4) == "ACT";
-    bool isActualMayo = rel_presente.budget_anio_fiscal.isActual(5) == "ACT";
-    bool isActualJunio = rel_presente.budget_anio_fiscal.isActual(6) == "ACT";
-    bool isActualJulio = rel_presente.budget_anio_fiscal.isActual(7) == "ACT";
-    bool isActualAgosto = rel_presente.budget_anio_fiscal.isActual(8) == "ACT";
-    bool isActualSeptiembre = rel_presente.budget_anio_fiscal.isActual(9) == "ACT";
-
-
+    bool isActualOctubre = true;
+    bool isActualNoviembre = true;
+    bool isActualDiciembre = true;
+    bool isActualEnero = true;
+    bool isActualFebrero = true;
+    bool isActualMarzo = true;
+    bool isActualAbril = true;
+    bool isActualMayo = true;
+    bool isActualJunio = true;
+    bool isActualJulio = true;
+    bool isActualAgosto = true;
+    bool isActualSeptiembre = true;
 
 }
 
@@ -168,6 +169,7 @@
         .handsontable .aplica-formula {
             background: repeating-linear-gradient( -50deg, #fff 10px, #fff 20px, #edecec 20px, #edecec 30px );
         }
+
         .handsontable .aplica-form-readonly {
             background: repeating-linear-gradient( -50deg, #dedede 10px, #dedede 20px, #edecec 20px, #edecec 30px );
         }
@@ -252,24 +254,25 @@
                                     <a class="nav-link" id="ht-actual-tab" data-toggle="tab" href="#ht-actual" role="tab" aria-controls="ht-actual" onclick="ResetScroll()" aria-selected="true">ACT FY  @rel_anterior.budget_anio_fiscal.descripcion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="ht-forecast-tab" data-toggle="tab" href="#ht-forecast" role="tab" aria-controls="ht-forecast" onclick="ResetScroll()" aria-selected="false">FC FY @rel_presente.budget_anio_fiscal.descripcion</a>
+                                    <a class="nav-link  @(!esProximo?"active":string.Empty)" id="ht-forecast-tab" data-toggle="tab" href="#ht-forecast" role="tab" aria-controls="ht-forecast" onclick="ResetScroll()" aria-selected="false">FC FY @rel_presente.budget_anio_fiscal.descripcion</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="ht-budget-tab" data-toggle="tab" href="#ht-budget" role="tab" aria-controls="ht-budget" onclick="ResetScroll()" aria-selected="false">BG FY @rel_proximo.budget_anio_fiscal.descripcion</a>
+                                    <a class="nav-link  @(esProximo?"active":string.Empty)" id="ht-budget-tab" data-toggle="tab" href="#ht-budget" role="tab" aria-controls="ht-budget" onclick="ResetScroll()" aria-selected="false">BG FY @rel_proximo.budget_anio_fiscal.descripcion</a>
                                 </li>
                             </ul>
+
 
                             <div class="tab-content" id="myTabContent">
                                 <div class="tab-pane fade" id="ht-actual" role="tabpanel" aria-labelledby="ht-actual-tab">
                                     <div class="form-group row">
                                     </div>
                                 </div>
-                                <div class="tab-pane fade show active" id="ht-forecast" role="tabpanel" aria-labelledby="ht-forecast-tab">
+                                <div class="tab-pane fade @(!esProximo?"show active":string.Empty)" id="ht-forecast" role="tabpanel" aria-labelledby="ht-forecast-tab">
                                     <div class="form-group row">
 
                                     </div>
                                 </div>
-                                <div class="tab-pane fade" id="ht-budget" role="tabpanel" aria-labelledby="ht-budget-tab">
+                                <div class="tab-pane fade  @(esProximo?"show active":string.Empty)" id="ht-budget" role="tabpanel" aria-labelledby="ht-budget-tab">
                                     <div class="form-group row">
                                     </div>
                                 </div>
@@ -279,8 +282,8 @@
                     <div class="col-md-12">
                         <div class="ln_solid"></div>
                         <button type="button" id="btn-clear_filters" class="btn btn-danger  float-lg-left"><i class="fa-solid fa-filter-circle-xmark"></i>  Borrar Filtros</button>
-                        <button type="button" id="btn-submit-salir" class="btn btn-info float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
-                        <button type="button" id="btn-submit" class="btn btn-success float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y continuar</button>
+                        @*<button type="button" id="btn-submit-salir" class="btn btn-info float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
+                            <button type="button" id="btn-submit" class="btn btn-success float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y continuar</button>*@
                     </div>
                 </div>
             </div>
@@ -329,7 +332,7 @@
     <!-- input mask -->
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
 
-<script>
+    <script>
 
            //define variables globales
    var container = document.getElementById('ht-actual'),
@@ -497,23 +500,23 @@
            headers1_actual,
            headers2
        ],
-         afterGetColHeader: function(col, TH) {
-           var TR = TH.parentNode;
-           var THEAD = TR.parentNode;
-           var headerLevel = (-1) * THEAD.childNodes.length + Array.prototype.indexOf.call(THEAD.childNodes, TR);
+        afterGetColHeader: function(col, TH) {
+        var TR = TH.parentNode;
+        var THEAD = TR.parentNode;
+        var headerLevel = (-1) * THEAD.childNodes.length + Array.prototype.indexOf.call(THEAD.childNodes, TR);
 
-           function applyClass(elem, className) {
-               if (!Handsontable.dom.hasClass(elem, className)) {
-                   Handsontable.dom.addClass(elem, className);
-               }
-           }
-           if (col == -1) {
-               applyClass(TH, 'HTgray');
-           } else if (col >= 3) {
-                   applyClass(TH, 'HTdarkgray');
-           } else {
-               applyClass(TH, 'HTblue');
-           }
+        function applyClass(elem, className) {
+            if (!Handsontable.dom.hasClass(elem, className)) {
+                Handsontable.dom.addClass(elem, className);
+            }
+        }
+        if (col == -1) {
+            applyClass(TH, 'HTgray');
+        } else if (col >= 3) {
+                applyClass(TH, 'HTdarkgray');
+        } else {
+            applyClass(TH, 'HTblue');
+        }
        },
        columns: [{
                readOnly: true
@@ -1694,6 +1697,7 @@
            },
            //comentarios
            {
+               readOnly: true,
                validator: function(value, callback) {
                    let max = 200;
                    if (value != null && value.length > max) {
@@ -3577,6 +3581,6 @@
        setTimeout(Recordatorio, 600000); //diez minutos
    }
 
-</script>
+    </script>
 
 }
